--- a/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
@@ -58,6 +58,31 @@
     }
 
     .table-row {
+        height: 55px;
+        grid-template-columns: 11% 10% 9% 13% 14% 12% 17% 13%;
+      }
+    
+      .table td {
+        height: 55px;
+      }
+    
+      .table-header {
+        grid-template-columns: 11% 10% 9% 13% 14% 12% 17% 13%;
+      }
+    
+      td img {
+        margin: 7px;
+        height: 25px;
+        width: 25px;
+      }
+
+      .collector_img {
+        width: 35px !important;
+        height: 35px !important;
+        border-radius: 50%;
+      }
+
+    /* .table-row {
         font-size: 1px;
         font-family: Montserrat;
         text-align: center;
@@ -85,7 +110,7 @@
         height: 55px;
         display: grid;
         grid-template-columns: 11% 10% 9% 13% 14% 12% 17% 13%;
-    }
+    } */
 
 
 
