--- a/public/css/Component/CenterManager/CenterManager_Request_Cancelled.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Cancelled.css
@@ -55,6 +55,26 @@
     }
 
     .table-row {
+        height: 55px;
+        grid-template-columns: 11% 10% 9% 11% 14% 12% 12% 21%;
+      }
+    
+      .table td {
+        height: 55px;
+      }
+    
+      .table-header {
+        grid-template-columns: 11% 10% 9% 11% 14% 12% 12% 21%;
+      }
+    
+      td img {
+        margin: 7px;
+        height: 25px;
+        width: 25px;
+      }
+
+
+    /* .table-row {
         font-size: 1px;
         font-family: Montserrat;
         text-align: center;
@@ -87,7 +107,7 @@
     .add {
         width: 402px;
         height: 40px;
-    }
+    } */
 
     .location_pop {
         display: none;
