--- a/public/css/Component/CenterManager/CenterManager_Request_Main.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Main.css
@@ -12,7 +12,7 @@
         display: grid;
         width: 100%;
         height: 100%;
-        grid-template-rows: 23% 79%;
+        grid-template-rows: 28% 72%;
         overflow: hidden;
         background-color: var(--background-color-right);
     }
@@ -215,9 +215,10 @@
 
     .main-right-top-four {
         display: flex;
-        align-items: start;
+        align-items: center;
         height: 24%;
         padding-right: 19px;
+        margin-bottom: 10px;
         justify-content: space-between;
     }
 
@@ -270,6 +271,7 @@
 
     .main-right-top-four-right {
         display: flex;
+        padding-right: 20px;
     }
 
     .main-right-top-four img {
