--- a/public/css/Component/Login.css
+++ b/public/css/Component/Login.css
@@ -6,6 +6,7 @@
         flex-direction: row;
         height: 731px;
         font-family: 'Inter', sans-serif;
+        color: var(--main-text-color);
     }
 
     * {
@@ -61,6 +62,7 @@
 
     .login {
         font-size: 35px;
+        letter-spacing: 0.03rem;
         margin-bottom: 15px;
         font-weight: bold;
     }
@@ -74,7 +76,7 @@
         width: 100px;
         height: 5px;
         margin-bottom: 50px;
-        background: #1B6652;
+        background: var(--green-color-one);
     }
 
     .field {
@@ -99,18 +101,15 @@
         width: 350px;
         border: none;
         border-radius: 5px;
-        font-size: 16px;
+        font-size: 15px;
         padding-left: 6px;
-        border: 2px solid #2d3436;
+        border: 1.5px solid #2d3436;
         outline: none;
-
-        /* Set border color to transparent */
     }
 
     input:focus {
-        border: 2px solid #4dccaa;
+        border: 1.5px solid #4dccaa;
         outline: none;
-
     }
 
     .forgot {
@@ -123,14 +122,16 @@
     }
 
     .login-button {
-        width: 160px;
+        width: 180px;
         height: 41px;
+        letter-spacing: 0.03rem;
         border-radius: 7px;
         font-size: 22px;
         margin-bottom: 28px;
         color: white;
         font-weight: 600;
-        background: #1B6652;
+        background: var(--green-color-one);
+        border: none;
         cursor: pointer;
     }
 
@@ -158,3 +159,4 @@
         color: black;
     }
 }
+
