--- a/public/css/Component/Admin/Admin_Customer.css
+++ b/public/css/Component/Admin/Admin_Customer.css
@@ -13,7 +13,7 @@
         color: inherit;
     }
 
-    .main {
+    .main-right {
         width: 100%;
         height: 727px;
         display: grid;
