--- a/public/css/Component/Admin/Admin_Center_Add.css
+++ b/public/css/Component/Admin/Admin_Center_Add.css
@@ -9,6 +9,15 @@
 
     }
 
+    
+    #centers i {
+        color: var(--green-color-one);
+    }
+
+    #centers h3 {
+        color: var(--green-color-one);
+    }
+
     .main-bottom-down-top {
         display: flex;
         align-items: center;
