--- a/public/css/Component/Admin/Admin_Collectors_Complains.css
+++ b/public/css/Component/Admin/Admin_Collectors_Complains.css
@@ -9,6 +9,14 @@
         font-family: inter;
     }
 
+    #complaints i {
+        color: var(--green-color-one);
+    }
+
+    #complaints h3 {
+        color: var(--green-color-one);
+    }
+
     .main-right-bottom {}
 
     .main-right-bottom-top {
