--- a/public/css/Component/Admin/Admin_Center_Main_Workers.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Workers.css
@@ -12,6 +12,14 @@
         color: inherit;
     }
 
+    #centers i {
+        color: var(--green-color-one);
+      }
+    
+    #centers h3 {
+        color: var(--green-color-one);
+    }
+
     .main-right {
         width: 100%;
         height: 727px;
