--- a/public/css/Component/Admin/Admin_Center_View.css
+++ b/public/css/Component/Admin/Admin_Center_View.css
@@ -15,7 +15,54 @@
         color: var(--green-color-one);
     }
 
+    .main-right-bottom-down {
+        padding-left: 3.5%;
+        width: 96.5%;
+        height: 450px;
+        overflow: scroll;
+    }
+
     .main-right-bottom-top {
+        padding-left: 3.5%;
+        width: 96.5%;
+    }
+
+    .logout_anchor {
+        width: auto;
+    }
+
+    .table-header {
+        grid-template-columns: 13% 13% 14% 16% 16% 14% 14%;
+    }
+
+    .table-row {
+        height: 52px;
+        display: grid;
+        grid-template-columns: 13% 13% 14% 16% 16% 14% 14%;
+    }
+
+    .table td {
+        height: 55px;
+    }
+
+    .manager_img{
+        width: 35px !important;
+        height: 35px !important;
+        border-radius: 50%;
+    }
+
+
+    td img {
+        margin: 6px;
+    }
+
+    .table-row img {
+        width: 25px;
+        height: 25px;
+        cursor: pointer;
+    }
+
+    /* .main-right-bottom-top {
         width: 99%;
         padding-left: 1%;
 
@@ -75,7 +122,7 @@
         width: 25px;
         height: 25px;
         cursor: pointer;
-    }
+    } */
 
 
     /*Location Pop*/
