--- a/public/css/Component/Admin/Admin_Center_Main_Collectors.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Collectors.css
@@ -21,83 +21,234 @@
     }
 
     .main-right {
-        width: 100%;
-        height: 727px;
+        background-color: var(--background-color-right);
         display: grid;
-        grid-template-rows: 8% 92%;
-        overflow: hidden;
+        grid-template-rows: 9% 91%;
     }
 
-    .main-top {
+    .main-right-top {
+        background-color: var(--background-color-main);
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
         align-items: center;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        justify-content: space-around;
+        box-shadow: var(--box-shadow2);
+        border: 10px;
+        z-index: 1;
     }
 
-    .main-top img {
-        width: 32px;
-        height: 32px;
-        margin-left: 30px;
-    }
-
-    .main-top-component {
+    .main-right-top-search {
         display: flex;
-        flex-direction: row;
         align-items: center;
         justify-content: center;
-        margin-right: 20px;
+        width: 35%;
+        position: relative;
     }
 
-    .back-button {
+    .main-right-top-search i {
+        position: absolute;
+        font-size: 25px;
+        left: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    .main-right-top-search input {
+        width: 100%;
+        height: 33px;
+        border-radius: 7px;
+        background-color: var(--background-color-two);
+        border: 1px solid #dcdde1;
+        font-size: 14px;
+        padding-left: 40px;
+        letter-spacing: 0.03rem;
+        color: var(--main-text-color);
+    }
+
+    .main-right-top-search input:focus {
+        border: 1px solid #1ca557;
+        outline: none;
+    }
+
+    .main-right-top-notification {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 30%;
+    }
+
+    .dot {
+        width: 11px;
+        height: 11px;
+        border-radius: 50%;
+        background-color: #F13E3E;
+        margin-top: -14px;
+        margin-left: -12px;
+    }
+
+    .main-right-top-notification i {
+        font-size: 29px;
         cursor: pointer;
     }
 
-    .main-top-component img {
-        width: 40px;
-        height: 40px;
-        margin-left: 15px;
+    .notification_popup {
+        height: 0;
+        position: absolute;
+        top: 9%;
+        right: 11%;
+        background-color: var(--background-color-main);
+        border-radius: 10px;
+        padding: 0;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        transition: height 0.6s ease-in;
+        width: 18%;
+        visibility: hidden;
+        opacity: 0;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: scroll;
+        border: 1px solid #dcdde1;
     }
 
-    .main-top-component p {
+    .notification_popup h1 {
+        font-size: 19px;
+        letter-spacing: 0.001rem;
+        margin-bottom: 13px;
+        margin-top: 5px;
+        margin-left: 8px;
+    }
+
+    .notification_popup.active {
+        height: 200px;
+        padding: 10px;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .notification {
+        height: 43px !important;
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+
+    .notification:hover {
+        background-color: var(--notification-hover);
+    }
+
+    .notification-green-dot {
+        width: 11px;
+        height: 11px;
+        border-radius: 50%;
+        background-color: var(--green-color-one);
+        margin-right: 10px;
+    }
+
+    .main-right-top-profile {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 40px;
+    }
+
+    .main-right-top-profile img {
+        width: 50px;
+        height: 50px;
+        margin-right: 15px;
+        border-radius: 10px;
+    }
+
+    .main-right-top-profile-cont {
+        margin-top: 7px;
+    }
+
+    .main-right-top-profile-cont h3 {
         font-size: 18px;
-        font-family: inter;
-        letter-spacing: 0.1px;
+        letter-spacing: 0.03rem;
     }
 
-    .main-bottom {
-        display: grid;
-        grid-template-rows: 10% 90%;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-
+    .main-right-top-profile-cont p {
+        font-size: 14px;
     }
 
     .main-right-top-two {
         height: 50px;
         display: flex;
         align-items: center;
-        padding: 15px;
-
+        padding-left: 33px;
+        margin-bottom: 10px;
+        background-color: var(--background-color-right);
     }
 
     .main-right-top-two h1 {
-        font-size: 28px;
+        font-size: 19px;
+        margin-left: 1%;
+        letter-spacing: 0.03rem;
+        margin-top: 1%;
     }
 
-    .main-right-bottom-down {
-        width: 99%;
-        height: 100%;
-        overflow: scroll;
-        padding-left: 1%;
+    .main-right-top-back-button i{
+        font-size: 28px;
+        font-weight: 600;
+    }
 
+    .main-right-top-back-button i:hover{
+      
+        color: #1ca557;
+    }
+
+
+    .main-right-bottom-down {
+        padding-left: 3.5%;
+        width: 96.5%;
+        height: 450px;
+        overflow: scroll;
     }
 
     .main-right-bottom-top {
-        width: 99%;
-        padding-left: 1%;
-
+        padding-left: 3.5%;
+        width: 96.5%;
     }
+
+    .logout_anchor {
+        width: auto;
+    }
+
+    .table-header {
+        grid-template-columns: 14% 14% 14% 16% 14% 14% 14%;
+    }
+
+    .table-row {
+        height: 52px;
+        display: grid;
+        grid-template-columns: 14% 14% 14% 16% 14% 14% 14%;
+    }
+
+    .table td {
+        height: 55px;
+    }
+
+    td img {
+        margin: 6px;
+    }
+
+    .table-row img {
+        width: 25px;
+        height: 25px;
+        cursor: pointer;
+    }
+
+    .collector_img {
+        width: 35px !important;
+        height: 35px !important;
+        border-radius: 50%;
+    }
+
+   
 
      /*Empty table UI*/
      .main-right-bottom-two {
@@ -135,70 +286,7 @@
         color: #7c7c7d;
     }
 
-    .table {
-        padding-left: 1%;
-        width: 99%;
-        border-collapse: collapse;
-        text-align: center;
-        padding-left: 1%;
-    }
-
-    .table-header th {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .table-header {
-        background-color: #ecf0f1;
-        font-size: 17px;
-        font-family: Montserrat;
-        text-align: center;
-        height: 55px;
-        display: grid;
-        grid-template-columns: 14% 14% 14% 16% 14% 14% 14%;
-    }
-
-    .table-row {
-        font-size: 1px;
-        font-family: Montserrat;
-        text-align: center;
-        height: 100px;
-        display: grid;
-        grid-template-columns: 14% 14% 14% 16% 14% 14% 14%;
-        border-bottom: 2px solid #CACACA;
-
-    }
-
-    .table td {
-        height: 100px;
-        font-size: 16px;
-        vertical-align: middle;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow-y: scroll;
-    }
-
-    td img {
-        margin: 6px;
-    }
-
-    .table-row img {
-        width: 25px;
-        height: 25px;
-        cursor: pointer;
-    }
-
-    .collector_image img {
-        width: 67px !important;
-        height: 67px !important;
-        border-radius: 50%;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    }
-    
+   
     /* ------ */
     @media screen and (max-width: 1118px) {
         .main-right-top-one-content {
