--- a/public/css/Component/Admin/Admin_Center_Top.css
+++ b/public/css/Component/Admin/Admin_Center_Top.css
@@ -223,106 +223,15 @@
         height: 3px;
     }
 
-    /* .main-right {
-        width: 100%;
-        height: 727px;
-        display: grid;
-        grid-template-rows: 8% 92%;
-        overflow: hidden;
-    }
-
-    .main-top {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .main-top img {
-        width: 32px;
-        height: 32px;
-        margin-left: 30px;
-    }
-
-    .main-top-component {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin-right: 20px;
-    }
-
-    .back-button {
-        cursor: pointer;
-    }
-
-    .main-top-component img {
-        width: 40px;
-        height: 40px;
-        margin-left: 15px;
-    }
-
-    .main-top-component p {
-        font-size: 18px;
-        font-family: inter;
-        letter-spacing: 0.1px;
-    }
-
-    .main-bottom {
-        display: grid;
-        grid-template-rows: 17% 83%;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .main-bottom-top {
-        border-radius: 10px;
-    }
-
-    .main-right-top-two {
-        height: 50px;
-        display: flex;
-        align-items: center;
-        padding-left: 33px;
-        padding-top: 5px;
-    }
-
-    .main-right-top-two h1 {
+    .main-right-top-back-button i{
         font-size: 28px;
+        font-weight: 600;
     }
 
-    .main-right-top-three {
-        display: flex;
-        flex-direction: row;
-        padding-left: 38px;
-        padding-top: 7px;
+    .main-right-top-back-button i:hover{
+      
+        color: #1ca557;
     }
-
-    .main-right-top-three-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-right: 30px;
-        cursor: pointer !important;
-    }
-
-    .main-right-top-three-content p {
-        font-size: 17px;
-        padding-bottom: 5px;
-    }
-
-    .line {
-        width: 93px;
-        height: 3px;
-        background-color: #1B6652;
-    }
-
-    .line1 {
-        width: 93px;
-        height: 3px;
-        background-color: none;
-    } */
 
     @media screen and (max-width: 1178px) {
         .image2 {
