--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,6 +80,8 @@
 
 @import url('Component/CenterManager/CenterManager_EditProfile.css');
 
+@import url('Component/CenterManager/CenterManager_Waste_Management.css');
+
 /* Admin CSS */
 
 /*Admin Main left hand side CSS This is used in left hand side of all the Center Manager uis*/
