--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,7 @@
 @import url('Component/CenterManager/CenterManager_EditProfile.css');
 
 @import url('Component/CenterManager/CenterManager_Waste_Management.css');
+@import url('Component/CenterManager/CenterManager_Center_Garbage_Stock.css');
 
 /* Admin CSS */
 
