--- a/public/css/Component/CenterManager/CenterManager_Center_Garbage_Stock.css
+++ b/public/css/Component/CenterManager/CenterManager_Center_Garbage_Stock.css
@@ -424,7 +424,7 @@
           position: absolute;
           height: 4px;
           width: 60px;
-          background: #1B6652;
+          background: var(--green-color-one);
           margin-top: 33px;
           margin-bottom: 5px;
         }
@@ -543,12 +543,12 @@
           cursor: pointer;
           border: none;
           letter-spacing: 1px;
-          background: #1B6652;
+          background: var(--green-color-one);
           padding: 0 20px;
         }
     
         .form-button button[type="submit"]:hover {
-          background: rgb(28, 79, 64);
+          background: #19954e;
         }
     
         .cancel-button {
@@ -574,6 +574,67 @@
     
       }
 
-   
+
+    /*Success popup*/
+    .request_success {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .popup {
+        width: 400px;
+        background: var(--background-color-main);
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .request_success .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        animation: bounceAndMove 2s ease infinite;
+
+    }
+
+    .popup h2 {
+        font-size: 38px;
+        font-weight: 500;
+        margin: 10px 0 10px;
+    }
+
+    .request_success .popup button {
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: var(--green-color-one);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+
+    }
 
 }
