stock relases UI

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,6 +82,7 @@
 
 @import url('Component/CenterManager/CenterManager_Waste_Management.css');
 @import url('Component/CenterManager/CenterManager_Center_Garbage_Stock.css');
+@import url('Component/CenterManager/CenterManager_Stock_Releases.css');
 
 /* Admin CSS */
 
