--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,6 +79,7 @@
 @import url('Component/CenterManager/CenterManager_Request_Completed.css');
 
 @import url('Component/CenterManager/CenterManager_EditProfile.css');
+@import url('Component/CenterManager/CenterManager_Complaints.css');
 
 @import url('Component/CenterManager/CenterManager_Waste_Management.css');
 @import url('Component/CenterManager/CenterManager_Center_Garbage_Stock.css');
