--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,6 +98,7 @@
 
 @import url('Component/Admin/Admin_Customer_Complains.css');
 @import url('Component/Admin/Admin_Collectors_Complains.css');
+@import url('Component/Admin/Admin_Centers_Complains.css');
 
 @import url('Component/Admin/Admin_Center_Manager_Add.css');
 @import url('Component/Admin/Admin_Center_Manager.css');
